--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "/Library/Developer/CommandLineTools/usr/bin/python3",
+    "python.pythonPath": "/Users/areed145/Library/Mobile Documents/com~apple~CloudDocs/vcscode/kk6gpv-flask/.venv/bin/python3",
     "appService.zipIgnorePattern": [
         ".vscode{,/**}"
     ],
