--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
       - image: circleci/buildpack-deps:stretch
     environment:
       IMAGE_NAME: areed145/kk6gpv
-    working_directory: /webapp
+    working_directory: ~/app
     steps:
       - checkout
       - setup_remote_docker
