--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
       - run:
           name: Build Docker image
           command: |
-            docker build -t $IMAGE_NAME:latest ./webapp
+            cd webapp && docker build -t $IMAGE_NAME:latest .
       - run:
           name: Push Docker Image
           command: |
