attempt multiple deployments

--- a/aprs_entry/Dockerfile
+++ b/aprs_entry/Dockerfile
@@ -2,16 +2,16 @@ FROM python:3.7-slim-buster
 
 LABEL maintainer="areed145@gmail.com"
 
-WORKDIR /webapp
+WORKDIR /aprs_mongodb_entry
 
-COPY . /webapp
+COPY . /aprs_mongodb_entry
 
 # We copy just the requirements.txt first to leverage Docker cache
 RUN pip install --upgrade pip && \
     pip install -r requirements.txt
 
-EXPOSE 80
+# EXPOSE 80
 
 ENV NAME World
 
-CMD ["python", "app.py"]
+CMD ["python", "aprs_mongodb_entry.py"]
