--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
 jobs:
-  build:
+  build_web_app:
     docker:
       - image: circleci/buildpack-deps:stretch
     environment:
@@ -32,6 +32,7 @@ jobs:
       - run:
           name: Deploy Code
           command: ./scripts/ci-deploy-web-app.sh
+  build_aprs_prefix:
     docker:
       - image: circleci/buildpack-deps:stretch
     environment:
@@ -67,7 +68,11 @@ workflows:
   version: 2
   build-master:
     jobs:
-      - build:
+      - build_web_app:
+          filters:
+            branches:
+              only: master
+      - build_aprs_prefix:
           filters:
             branches:
               only: master
