--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,7 +44,7 @@ jobs:
       - run:
           name: Build Docker image
           command: |
-            cd webapp && docker build -t $IMAGE_NAME:latest .
+            cd aprs-prefix && docker build -t $IMAGE_NAME:latest .
       - run:
           name: Push Docker Image
           command: |
