--- a/aprs-radius/Dockerfile
+++ b/aprs-radius/Dockerfile
@@ -2,9 +2,9 @@ FROM python:3.7-slim-buster
 
 LABEL maintainer="areed145@gmail.com"
 
-WORKDIR /aprs_mongodb_radius
+WORKDIR /aprs-radius
 
-COPY . /aprs_mongodb_radius
+COPY . /aprs-radius
 
 # We copy just the requirements.txt first to leverage Docker cache
 RUN pip install --upgrade pip && \
@@ -14,4 +14,4 @@ RUN pip install --upgrade pip && \
 
 ENV NAME World
 
-CMD ["python", "aprs_mongodb_radius.py"]
+CMD ["python", "aprs-radius.py"]
