--- a/kube/deployment-aprs-radius.yml
+++ b/kube/deployment-aprs-radius.yml
@@ -14,8 +14,8 @@ spec:
         name: kk6gpv-aprs-radius
     spec:
       containers:
-      - name: application
-        image: areed145/kk6gpv-aprs-radius:$COMMIT_SHA1
-        imagePullPolicy: IfNotPresent
-        ports:
-          - containerPort: 4000
+        - name: application
+          image: areed145/kk6gpv-aprs-radius:latest
+          imagePullPolicy: IfNotPresent
+          ports:
+            - containerPort: 4000
