--- a/kube/deployment-aprs-radius.yml
+++ b/kube/deployment-aprs-radius.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: application
-          image: areed145/kk6gpv-aprs-radius:latest
+          image: areed145/kk6gpv-aprs-radius:$COMMIT_SHA1
           imagePullPolicy: Always
           ports:
             - containerPort: 4000
