--- a/kube/deployment-wunderground.yml
+++ b/kube/deployment-wunderground.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: application
-          image: areed145/kk6gpv-wunderground:latest
+          image: areed145/kk6gpv-wunderground:$COMMIT_SHA1
           imagePullPolicy: Always
           ports:
             - containerPort: 4000
