--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -255,7 +255,7 @@ jobs:
             chmod u+x ./kubectl
       - run:
           name: Deploy Code
-          command: ./scripts/ci-deploy-doggr.sh
+          command: sh ./scripts/ci-deploy-doggr.sh
 workflows:
   version: 2
   build-master:
