--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aprslib==0.6.46
 APScheduler==3.6.1
 astroid==2.2.5
+autopep8==1.4.4
 branca==0.3.1
 certifi==2019.9.11
 chardet==3.0.4
@@ -19,8 +20,11 @@ MarkupSafe==1.1.1
 mccabe==0.6.1
 numpy==1.17.2
 oauth2==1.9.0.post1
+paho-mqtt==1.4.0
 pandas==0.25.1
 plotly==4.1.1
+psycopg2-binary==2.8.3
+pycodestyle==2.5.0
 pylint==2.3.1
 pymongo==3.9.0
 python-dateutil==2.8.0
