--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,10 @@ chardet==3.0.4
 Click==7.0
 dnspython==1.16.0
 Flask==1.1.1
+flask-mongoengine==0.9.5
+Flask-PyMongo==2.3.0
+Flask-Track-Usage==2.0.0
+Flask-WTF==0.14.2
 flickr-api==0.7.3
 folium==0.10.0
 httplib2==0.13.1
@@ -18,6 +22,7 @@ Jinja2==2.10.1
 lazy-object-proxy==1.4.2
 MarkupSafe==1.1.1
 mccabe==0.6.1
+mongoengine==0.18.2
 numpy==1.17.2
 oauth2==1.9.0.post1
 paho-mqtt==1.4.0
@@ -37,3 +42,4 @@ tzlocal==2.0.0
 urllib3==1.25.3
 Werkzeug==0.15.6
 wrapt==1.11.2
+WTForms==2.2.1
