--- a/web-app/requirements.txt
+++ b/web-app/requirements.txt
@@ -7,6 +7,8 @@ chardet==3.0.4
 Click==7.0
 dnspython==1.16.0
 Flask==1.1.1
+flask-mongoengine==0.9.5
+Flask-Track-Usage==2.0.0
 flickr-api==0.7.3
 folium==0.10.0
 httplib2==0.13.1
