--- a/kube/service.yml
+++ b/kube/service.yml
@@ -3,6 +3,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: kk6gpv-web-service
+  annotations:
+    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: "true"
 spec:
   type: LoadBalancer
   ports:
