--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,10 @@ certifi==2019.9.11
 chardet==3.0.4
 Click==7.0
 dnspython==1.16.0
+feather-format==0.4.0
 Flask==1.1.1
+Flask-Cache==0.13.1
+Flask-Caching==1.7.2
 flask-mongoengine==0.9.5
 Flask-PyMongo==2.3.0
 Flask-Track-Usage==2.0.0
@@ -29,6 +32,7 @@ paho-mqtt==1.4.0
 pandas==0.25.1
 plotly==4.1.1
 psycopg2-binary==2.8.3
+pyarrow==0.15.0
 pycodestyle==2.5.0
 pylint==2.3.1
 pymongo==3.9.0
