--- a/web-app/requirements.txt
+++ b/web-app/requirements.txt
@@ -1,13 +1,19 @@
 aprslib==0.6.46
 APScheduler==3.6.1
 astroid==2.2.5
+autopep8==1.4.4
 branca==0.3.1
 certifi==2019.9.11
 chardet==3.0.4
 Click==7.0
 dnspython==1.16.0
+feather-format==0.4.0
 Flask==1.1.1
+Flask-Caching==1.7.2
+flask-mongoengine==0.9.5
+Flask-PyMongo==2.3.0
 Flask-Track-Usage==2.0.0
+Flask-WTF==0.14.2
 flickr-api==0.7.3
 folium==0.10.0
 httplib2==0.13.1
@@ -18,10 +24,14 @@ Jinja2==2.10.1
 lazy-object-proxy==1.4.2
 MarkupSafe==1.1.1
 mccabe==0.6.1
+mongoengine==0.18.2
 numpy==1.17.2
 oauth2==1.9.0.post1
+paho-mqtt==1.4.0
 pandas==0.25.1
 plotly==4.1.1
+psycopg2-binary==2.8.3
+pycodestyle==2.5.0
 pylint==2.3.1
 pymongo==3.9.0
 python-dateutil==2.8.0
@@ -34,3 +44,4 @@ tzlocal==2.0.0
 urllib3==1.25.3
 Werkzeug==0.15.6
 wrapt==1.11.2
+WTForms==2.2.1
