--- a/requirements.txt
+++ b/requirements.txt
@@ -1,49 +1,241 @@
+absl-py==0.8.1
+adal==1.2.2
+apache-beam==2.16.0
+applicationinsights==0.11.9
+appnope==0.1.0
 aprslib==0.6.46
 APScheduler==3.6.1
+astor==0.8.0
 astroid==2.2.5
+attrs==19.3.0
 autopep8==1.4.4
+avro-python3==1.9.1
+azure-common==1.1.23
+azure-graphrbac==0.61.1
+azure-mgmt-authorization==0.60.0
+azure-mgmt-containerregistry==2.8.0
+azure-mgmt-keyvault==2.0.0
+azure-mgmt-resource==5.1.0
+azure-mgmt-storage==4.2.0
+azureml-automl-core==1.0.69
+azureml-core==1.0.69
+azureml-dataprep==1.1.24
+azureml-dataprep-native==13.1.0
+azureml-pipeline==1.0.69
+azureml-pipeline-core==1.0.69
+azureml-pipeline-steps==1.0.69
+azureml-sdk==1.0.69
+azureml-telemetry==1.0.69
+azureml-train==1.0.69
+azureml-train-automl==1.0.69
+azureml-train-core==1.0.69
+azureml-train-restclients-hyperdrive==1.0.69
+backcall==0.1.0
+backports.tempfile==1.0
+backports.weakref==1.0.post1
+bleach==3.1.0
+boto==2.49.0
+boto3==1.9.253
+botocore==1.12.253
 branca==0.3.1
+cachetools==3.1.1
 certifi==2019.9.11
+cffi==1.13.1
 chardet==3.0.4
 Click==7.0
+cloudpickle==1.2.2
+contextlib2==0.6.0.post1
+crcmod==1.7
+cryptography==2.8
+cycler==0.10.0
+Cython==0.29.13
+dash==1.4.1
+dash-core-components==1.3.1
+dash-cytoscape==0.1.1
+dash-html-components==1.0.1
+dash-renderer==1.1.2
+dash-table==4.4.1
+decorator==4.4.0
+defusedxml==0.6.0
+dill==0.3.0
+distro==1.4.0
 dnspython==1.16.0
+docker==4.1.0
+docopt==0.6.2
+docutils==0.15.2
+dotnetcore2==2.1.9
+entrypoints==0.3
+fastavro==0.21.24
+fasteners==0.15
 feather-format==0.4.0
+fire==0.2.1
 Flask==1.1.1
 Flask-Cache==0.13.1
 Flask-Caching==1.7.2
+Flask-Compress==1.4.0
 flask-mongoengine==0.9.5
 Flask-PyMongo==2.3.0
 Flask-Track-Usage==2.0.0
 Flask-WTF==0.14.2
 flickr-api==0.7.3
 folium==0.10.0
+fusepy==3.0.1
+future==0.18.1
+gast==0.2.2
+gensim==3.8.1
+google-api-core==1.14.3
+google-api-python-client==1.7.11
+google-apitools==0.5.28
+google-auth==1.6.3
+google-auth-httplib2==0.0.3
+google-cloud-bigquery==1.17.1
+google-cloud-bigtable==1.0.0
+google-cloud-core==1.0.3
+google-cloud-datastore==1.7.4
+google-cloud-pubsub==1.0.2
+google-pasta==0.1.7
+google-resumable-media==0.4.1
+googleapis-common-protos==1.6.0
+grpc-google-iam-v1==0.12.3
+grpcio==1.24.3
+h5py==2.10.0
+hdfs==2.5.8
 httplib2==0.13.1
 idna==2.8
+imageio==2.6.1
+importlib-metadata==0.23
+ipykernel==5.1.3
+ipython==7.8.0
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
+isodate==0.6.0
 isort==4.3.21
 itsdangerous==1.1.0
+jedi==0.15.1
+jeepney==0.4.1
 Jinja2==2.10.1
+jmespath==0.9.4
+joblib==0.14.0
+JsonForm==0.0.2
+jsonpickle==1.2
+jsonschema==3.1.1
+JsonSir==0.0.2
+jupyter==1.0.0
+jupyter-client==5.3.4
+jupyter-console==6.0.0
+jupyter-core==4.6.0
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.0
+keras2onnx==1.5.2
+kiwisolver==1.1.0
 lazy-object-proxy==1.4.2
+lightgbm==2.2.3
+Markdown==3.1.1
 MarkupSafe==1.1.1
+matplotlib==3.1.1
 mccabe==0.6.1
+mistune==0.8.4
+ml-metadata==0.14.0
+mock==2.0.0
 mongoengine==0.18.2
-numpy==1.17.2
+monotonic==1.5
+more-itertools==7.2.0
+msrest==0.6.10
+msrestazure==0.6.2
+nbconvert==5.6.0
+nbformat==4.4.0
+ndg-httpsclient==0.5.1
+networkx==2.4
+nimbusml==1.5.0
+notebook==6.0.1
+numpy==1.16.2
 oauth2==1.9.0.post1
+oauth2client==3.0.0
+oauthlib==3.1.0
+onnx==1.6.0
+onnxconverter-common==1.5.5
+onnxmltools==1.4.1
+opt-einsum==3.1.0
 paho-mqtt==1.4.0
-pandas==0.25.1
+pandas==0.25.2
+pandocfilters==1.4.2
+parso==0.5.1
+pathspec==0.6.0
+patsy==0.5.1
+pbr==5.4.3
+pexpect==4.7.0
+pickleshare==0.7.5
+Pillow==6.2.1
 plotly==4.1.1
+pmdarima==1.1.1
+prometheus-client==0.7.1
+prompt-toolkit==2.0.10
+protobuf==3.10.0
+psutil==5.6.3
 psycopg2-binary==2.8.3
-pyarrow==0.15.0
+ptyprocess==0.6.0
+pyarrow==0.14.1
+pyasn1==0.4.7
+pyasn1-modules==0.2.7
 pycodestyle==2.5.0
+pycparser==2.19
+pydot==1.4.1
+Pygments==2.4.2
+PyJWT==1.7.1
 pylint==2.3.1
 pymongo==3.9.0
+pyOpenSSL==19.0.0
+pyparsing==2.4.2
+pyrsistent==0.15.4
 python-dateutil==2.8.0
+Python-EasyConfig==0.1.7
 pytz==2019.2
+PyWavelets==1.1.1
+PyYAML==3.13
+pyzmq==18.1.0
+qtconsole==4.5.5
 requests==2.22.0
+requests-oauthlib==1.2.0
+Resource==0.2.1
 retrying==1.3.3
+rsa==4.0
+ruamel.yaml==0.15.89
+s3transfer==0.2.1
+scikit-image==0.16.1
+scikit-learn==0.20.3
+scipy==1.1.0
+SecretStorage==3.1.1
+Send2Trash==1.5.0
+shap==0.29.3
 six==1.12.0
+skl2onnx==1.4.9
+sklearn-pandas==1.7.0
+smart-open==1.8.4
+statsmodels==0.10.1
+tensorboard==2.0.0
+tensorflow==2.0.0
+tensorflow-data-validation==0.14.1
+tensorflow-estimator==2.0.1
+tensorflow-metadata==0.14.0
+tensorflow-model-analysis==0.14.0
+tensorflow-transform==0.14.0
+termcolor==1.1.0
+terminado==0.8.2
+testpath==0.4.2
+tfx==0.14.0
+tornado==6.0.3
+tqdm==4.36.1
+traitlets==4.3.3
 typed-ast==1.4.0
+typing-extensions==3.7.4
 tzlocal==2.0.0
+uritemplate==3.0.0
 urllib3==1.25.3
+wcwidth==0.1.7
+webencodings==0.5.1
+websocket-client==0.56.0
 Werkzeug==0.15.6
+widgetsnbextension==3.5.1
 wrapt==1.11.2
 WTForms==2.2.1
+zipp==0.6.0
