--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 absl-py==0.8.1
 adal==1.2.2
+alembic==1.2.1
+apache-airflow==1.10.5
 apache-beam==2.16.0
+apispec==3.0.0
 applicationinsights==0.11.9
 appnope==0.1.0
 aprslib==0.6.46
@@ -30,22 +33,32 @@ azureml-train==1.0.69
 azureml-train-automl==1.0.69
 azureml-train-core==1.0.69
 azureml-train-restclients-hyperdrive==1.0.69
+Babel==2.7.0
 backcall==0.1.0
 backports.tempfile==1.0
 backports.weakref==1.0.post1
+beautifulsoup4==4.8.1
 bleach==3.1.0
+blinker==1.4
 boto==2.49.0
 boto3==1.9.253
 botocore==1.12.253
 branca==0.3.1
+cached-property==1.5.1
 cachetools==3.1.1
 certifi==2019.9.11
 cffi==1.13.1
 chardet==3.0.4
 Click==7.0
+click-plugins==1.1.1
+cligj==0.5.0
 cloudpickle==1.2.2
+colorama==0.4.1
+colorlog==4.0.2
+configparser==3.5.3
 contextlib2==0.6.0.post1
 crcmod==1.7
+croniter==0.3.30
 cryptography==2.8
 cycler==0.10.0
 Cython==0.29.13
@@ -57,32 +70,49 @@ dash-renderer==1.1.2
 dash-table==4.4.1
 decorator==4.4.0
 defusedxml==0.6.0
-dill==0.3.0
+descartes==1.1.0
+dill==0.2.9
 distro==1.4.0
 dnspython==1.16.0
 docker==4.1.0
 docopt==0.6.2
 docutils==0.15.2
 dotnetcore2==2.1.9
+dumb-init==1.2.2
 entrypoints==0.3
 fastavro==0.21.24
 fasteners==0.15
 feather-format==0.4.0
+Fiona==1.8.9.post2
 fire==0.2.1
 Flask==1.1.1
+Flask-Admin==1.5.3
+Flask-AppBuilder==1.13.1
+Flask-Babel==0.12.2
+Flask-Blogging==1.2.2
 Flask-Cache==0.13.1
-Flask-Caching==1.7.2
+Flask-Caching==1.3.3
 Flask-Compress==1.4.0
+Flask-FileUpload==0.5.0
+Flask-JWT-Extended==3.24.0
+Flask-Login==0.4.1
 flask-mongoengine==0.9.5
+Flask-OpenID==1.2.5
+Flask-Principal==0.4.0
 Flask-PyMongo==2.3.0
+Flask-SQLAlchemy==2.4.1
+flask-swagger==0.2.13
 Flask-Track-Usage==2.0.0
 Flask-WTF==0.14.2
 flickr-api==0.7.3
 folium==0.10.0
+freud-analysis==1.2.2
+funcsigs==1.0.0
 fusepy==3.0.1
-future==0.18.1
+future==0.16.0
 gast==0.2.2
 gensim==3.8.1
+geopandas==0.6.1
 google-api-core==1.14.3
 google-api-python-client==1.7.11
 google-apitools==0.5.28
@@ -98,6 +128,7 @@ google-resumable-media==0.4.1
 googleapis-common-protos==1.6.0
 grpc-google-iam-v1==0.12.3
 grpcio==1.24.3
+gunicorn==19.9.0
 h5py==2.10.0
 hdfs==2.5.8
 httplib2==0.13.1
@@ -108,6 +139,7 @@ ipykernel==5.1.3
 ipython==7.8.0
 ipython-genutils==0.2.0
 ipywidgets==7.5.1
+iso8601==0.1.12
 isodate==0.6.0
 isort==4.3.21
 itsdangerous==1.1.0
@@ -116,6 +148,7 @@ jeepney==0.4.1
 Jinja2==2.10.1
 jmespath==0.9.4
 joblib==0.14.0
+json-merge-patch==0.2
 JsonForm==0.0.2
 jsonpickle==1.2
 jsonschema==3.1.1
@@ -130,10 +163,16 @@ keras2onnx==1.5.2
 kiwisolver==1.1.0
 lazy-object-proxy==1.4.2
 lightgbm==2.2.3
-Markdown==3.1.1
+lockfile==0.12.2
+Mako==1.1.0
+Markdown==2.6.11
 MarkupSafe==1.1.1
+marshmallow==2.19.5
+marshmallow-enum==1.5.1
+marshmallow-sqlalchemy==0.19.0
 matplotlib==3.1.1
 mccabe==0.6.1
+micawber==0.5.1
 mistune==0.8.4
 ml-metadata==0.14.0
 mock==2.0.0
@@ -142,6 +181,7 @@ monotonic==1.5
 more-itertools==7.2.0
 msrest==0.6.10
 msrestazure==0.6.2
+munch==2.4.0
 nbconvert==5.6.0
 nbformat==4.4.0
 ndg-httpsclient==0.5.1
@@ -156,6 +196,7 @@ onnx==1.6.0
 onnxconverter-common==1.5.5
 onnxmltools==1.4.1
 opt-einsum==3.1.0
+ordereddict==1.1
 paho-mqtt==1.4.0
 pandas==0.25.2
 pandocfilters==1.4.2
@@ -163,11 +204,14 @@ parso==0.5.1
 pathspec==0.6.0
 patsy==0.5.1
 pbr==5.4.3
+peewee==3.11.2
+pendulum==1.4.4
 pexpect==4.7.0
 pickleshare==0.7.5
 Pillow==6.2.1
 plotly==4.1.1
 pmdarima==1.1.1
+prison==0.1.0
 prometheus-client==0.7.1
 prompt-toolkit==2.0.10
 protobuf==3.10.0
@@ -186,12 +230,18 @@ pylint==2.3.1
 pymongo==3.9.0
 pyOpenSSL==19.0.0
 pyparsing==2.4.2
+pyproj==2.4.0
 pyrsistent==0.15.4
+python-daemon==2.1.2
 python-dateutil==2.8.0
 Python-EasyConfig==0.1.7
+python-editor==1.0.4
+python-slugify==4.0.0
+python3-openid==3.1.0
 pytz==2019.2
+pytzdata==2019.3
 PyWavelets==1.1.1
-PyYAML==5.1
+PyYAML==3.13
 pyzmq==18.1.0
 qtconsole==4.5.5
 requests==2.22.0
@@ -206,12 +256,19 @@ scikit-learn==0.20.3
 scipy==1.1.0
 SecretStorage==3.1.1
 Send2Trash==1.5.0
+setproctitle==1.1.10
 shap==0.29.3
+Shapely==1.6.4.post2
+shortuuid==0.5.0
 six==1.12.0
 skl2onnx==1.4.9
 sklearn-pandas==1.7.0
 smart-open==1.8.4
+soupsieve==1.9.4
+SQLAlchemy==1.3.10
 statsmodels==0.10.1
+tabulate==0.8.5
+tenacity==4.12.0
 tensorboard==2.0.0
 tensorflow==2.0.0
 tensorflow-data-validation==0.14.1
@@ -222,13 +279,16 @@ tensorflow-transform==0.14.0
 termcolor==1.1.0
 terminado==0.8.2
 testpath==0.4.2
+text-unidecode==1.3
 tfx==0.14.0
+thrift==0.11.0
 tornado==6.0.3
 tqdm==4.36.1
 traitlets==4.3.3
 typed-ast==1.4.0
 typing-extensions==3.7.4
-tzlocal==2.0.0
+tzlocal==1.5.1
+unicodecsv==0.14.1
 uritemplate==3.0.0
 urllib3==1.25.3
 wcwidth==0.1.7
@@ -239,3 +299,4 @@ widgetsnbextension==3.5.1
 wrapt==1.11.2
 WTForms==2.2.1
 zipp==0.6.0
+zope.deprecation==4.4.0
