--- a/web-app/requirements.txt
+++ b/web-app/requirements.txt
@@ -9,6 +9,7 @@ Click==7.0
 dnspython==1.16.0
 feather-format==0.4.0
 Flask==1.1.1
+Flask-Blogging==1.2.2
 Flask-Caching==1.7.2
 flask-mongoengine==0.9.5
 Flask-PyMongo==2.3.0
