--- a/web-app/Dockerfile
+++ b/web-app/Dockerfile
@@ -10,10 +10,9 @@ COPY . /web-app
 RUN pip install --upgrade pip && \
     pip install -r requirements.txt
 
-EXPOSE 80
-
 ENV MONGODB_CLIENT 'mongodb://kk6gpv:kk6gpv@mongo-mongodb-replicaset-0.mongo-mongodb-replicaset.default.svc.cluster.local,mongo-mongodb-replicaset-1.mongo-mongodb-replicaset.default.svc.cluster.local,mongo-mongodb-replicaset-2.mongo-mongodb-replicaset.default.svc.cluster.local/?replicaSet=db'
 ENV MAPBOX_TOKEN 'pk.eyJ1IjoiYXJlZWQxNDUiLCJhIjoiY2phdzNsN2ZoMGh0bjMybzF3cTkycWYyciJ9.4aS7z-guI2VDlP3duMg2FA'
 ENV SID 'KTXHOUST1941'
+ENV PORT 8080
 
-CMD ["python", "app.py"]
+CMD ["gunicorn", "app:app", "--config=config.py"]
