--- a/web-app/requirements.txt
+++ b/web-app/requirements.txt
@@ -20,6 +20,7 @@ Flask-Track-Usage==2.0.0
 Flask-WTF==0.14.2
 flickr-api==0.7.3
 folium==0.10.0
+gunicorn==19.9.0
 httplib2==0.13.1
 idna==2.8
 isort==4.3.21
