add label to app

--- a/kube/deployment-web-app.yml
+++ b/kube/deployment-web-app.yml
@@ -3,6 +3,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: kk6gpv-web-app
+  labels:
+    app: kk6gpv-web-app
 spec:
   replicas: 5
   selector:
