--- a/kube/deployment-web-app.yml
+++ b/kube/deployment-web-app.yml
@@ -7,9 +7,9 @@ metadata:
     name: kk6gpv-web-app
 spec:
   replicas: 5
-  selector:
-    matchLabels:
-      app: kk6gpv-web-app
+  # selector:
+  #   matchLabels:
+  #     app: kk6gpv-web-app
   template:
     metadata:
       labels:
