--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -224,6 +224,38 @@ jobs:
       - run:
           name: Deploy Code
           command: ./scripts/ci-deploy-wunderground.sh
+  build_metpy_tasks:
+    docker:
+      - image: circleci/buildpack-deps:stretch
+    environment:
+      IMAGE_NAME: areed145/kk6gpv-metpy-tasks
+    working_directory: ~/metpy-tasks
+    steps:
+      - checkout
+      - setup_remote_docker
+      - run:
+          name: Build Docker image
+          command: |
+            cd wunderground && docker build -t $IMAGE_NAME:latest .
+      - run:
+          name: Push Docker Image
+          command: |
+            echo "$DOCKERHUB_PASS" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
+            docker tag $IMAGE_NAME:latest $IMAGE_NAME:$CIRCLE_SHA1
+            docker push $IMAGE_NAME:latest
+            docker push $IMAGE_NAME:$CIRCLE_SHA1
+      - run:
+          name: Install envsubst
+          command: |
+            sudo apt-get update && sudo apt-get -y install gettext-base
+      - run:
+          name: Install kubectl
+          command: |
+            curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl
+            chmod u+x ./kubectl
+      - run:
+          name: Deploy Code
+          command: ./scripts/ci-deploy-metpy-tasks.sh
   build_doggr_agg:
     docker:
       - image: circleci/buildpack-deps:stretch
@@ -317,6 +349,10 @@ workflows:
             branches:
               only: master
       - build_wunderground:
+          filters:
+            branches:
+              only: master
+      - build_metpy_taks:
           filters:
             branches:
               only: master
