--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -236,7 +236,7 @@ jobs:
       - run:
           name: Build Docker image
           command: |
-            cd wunderground && docker build -t $IMAGE_NAME:latest .
+            cd metpy-tasks && docker build -t $IMAGE_NAME:latest .
       - run:
           name: Push Docker Image
           command: |
