conda for metpy-tasks

--- a/metpy-tasks/Dockerfile
+++ b/metpy-tasks/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.7-slim-buster
+FROM continuumio/miniconda3
 
 LABEL maintainer="areed145@gmail.com"
 
@@ -6,13 +6,10 @@ WORKDIR /metpy-tasks
 
 COPY . /metpy-tasks
 
-# We copy just the requirements.txt first to leverage Docker cache
-RUN pip install --upgrade pip && \
-    pip install -r requirements.txt
+RUN conda env create -f environment.yml
+RUN echo "source activate $(head -1 environment.yml | cut -d' ' -f2)" > ~/.bashrc
+ENV PATH /opt/conda/envs/$(head -1 environment.yml | cut -d' ' -f2)/bin:$PATH
 
-# EXPOSE 80
-
-#ENV MONGODB_CLIENT 'mongodb://kk6gpv:kk6gpv@mongo-mongodb-replicaset-0.mongo-mongodb-replicaset.default.svc.cluster.local,mongo-mongodb-replicaset-1.mongo-mongodb-replicaset.default.svc.cluster.local,mongo-mongodb-replicaset-2.mongo-mongodb-replicaset.default.svc.cluster.local/?replicaSet=db'
 ENV MONGODB_CLIENT 'mongodb+srv://kk6gpv:kk6gpv@cluster0-kglzh.azure.mongodb.net/test?retryWrites=true&w=majority'
 
 CMD ["python", "metpy-tasks.py"]
