--- a/metpy-tasks/Dockerfile
+++ b/metpy-tasks/Dockerfile
@@ -3,12 +3,11 @@ FROM continuumio/miniconda3
 LABEL maintainer="areed145@gmail.com"
 
 WORKDIR /metpy-tasks
-
 COPY . /metpy-tasks
 
-RUN conda env create -f environment.yml
-RUN echo "source activate $(head -1 environment.yml | cut -d' ' -f2)" > ~/.bashrc
-ENV PATH /opt/conda/envs/$(head -1 environment.yml | cut -d' ' -f2)/bin:$PATH
+RUN conda install cartopy
+RUN conda install -c conda-forge matplotlib siphon metpy
+RUN pip install pymongo==3.9.0 dnspython==1.16.0
 
 ENV MONGODB_CLIENT 'mongodb+srv://kk6gpv:kk6gpv@cluster0-kglzh.azure.mongodb.net/test?retryWrites=true&w=majority'
 
