--- a/metpy-tasks/environment.yml
+++ b/metpy-tasks/environment.yml
@@ -4,10 +4,13 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.7   # or 2.7
+  - python=3.7
+  - pip
   - metpy
+  - cartopy
   - siphon==0.8.0
-  - pandas
-  - numpy
-  - matplotlib
-  - pymongo==3.9.0
+  - pip:
+    - pymongo==3.9.0
+    - pandas
+    - numpy
+    - matplotlib
