--- a/kube/deployment-metpy-tasks.yml
+++ b/kube/deployment-metpy-tasks.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: application
-          image: areed145/kk6gpv-metpy-tasks:$COMMIT_SHA1
+          image: areed145/kk6gpv-metpy-tasks:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 4000
