update for new arch

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,37 +1,37 @@
 version: 2.1
 jobs:
-  build_web_app:
-    docker:
-      - image: circleci/buildpack-deps:stretch
-    environment:
-      IMAGE_NAME: areed145/kk6gpv-web-app
-    working_directory: ~/web-app
-    steps:
-      - checkout
-      - setup_remote_docker
-      - run:
-          name: Build Docker image
-          command: |
-            cd web-app && docker build -t $IMAGE_NAME:latest .
-      - run:
-          name: Push Docker Image
-          command: |
-            echo "$DOCKERHUB_PASS" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
-            docker tag $IMAGE_NAME:latest $IMAGE_NAME:$CIRCLE_SHA1
-            docker push $IMAGE_NAME:latest
-            docker push $IMAGE_NAME:$CIRCLE_SHA1
-      - run:
-          name: Install envsubst
-          command: |
-            sudo apt-get update && sudo apt-get -y install gettext-base
-      - run:
-          name: Install kubectl
-          command: |
-            curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl
-            chmod u+x ./kubectl
-      - run:
-          name: Deploy Code
-          command: ./scripts/ci-deploy-web-app.sh
+  # build_web_app:
+  #   docker:
+  #     - image: circleci/buildpack-deps:stretch
+  #   environment:
+  #     IMAGE_NAME: areed145/kk6gpv-web-app
+  #   working_directory: ~/web-app
+  #   steps:
+  #     - checkout
+  #     - setup_remote_docker
+  #     - run:
+  #         name: Build Docker image
+  #         command: |
+  #           cd web-app && docker build -t $IMAGE_NAME:latest .
+  #     - run:
+  #         name: Push Docker Image
+  #         command: |
+  #           echo "$DOCKERHUB_PASS" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
+  #           docker tag $IMAGE_NAME:latest $IMAGE_NAME:$CIRCLE_SHA1
+  #           docker push $IMAGE_NAME:latest
+  #           docker push $IMAGE_NAME:$CIRCLE_SHA1
+  #     - run:
+  #         name: Install envsubst
+  #         command: |
+  #           sudo apt-get update && sudo apt-get -y install gettext-base
+  #     - run:
+  #         name: Install kubectl
+  #         command: |
+  #           curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl
+  #           chmod u+x ./kubectl
+  #     - run:
+  #         name: Deploy Code
+  #         command: ./scripts/ci-deploy-web-app.sh
   build_aprs_prefix:
     docker:
       - image: circleci/buildpack-deps:stretch
@@ -324,10 +324,10 @@ workflows:
   version: 2
   build-master:
     jobs:
-      - build_web_app:
-          filters:
-            branches:
-              only: master
+      # - build_web_app:
+      #     filters:
+      #       branches:
+      #         only: master
       - build_aprs_prefix:
           filters:
             branches:
