--- a/kube/deployment-aprs-prefix.yml
+++ b/kube/deployment-aprs-prefix.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: application
-          image: areed145/kk6gpv-aprs-prefix:$COMMIT_SHA1
+          image: areed145/kk6gpv-aprs-prefix:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 4000
