--- a/kube/deployment-awc.yml
+++ b/kube/deployment-awc.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: application
-          image: areed145/kk6gpv-awc:$COMMIT_SHA1
+          image: areed145/kk6gpv-awc:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 4000
