--- a/kube/deployment-doggr.yml
+++ b/kube/deployment-doggr.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: application
-          image: areed145/kk6gpv-doggr:$COMMIT_SHA1
+          image: areed145/kk6gpv-doggr:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 4000
