--- a/kube/deployment-doggr-cyc.yml
+++ b/kube/deployment-doggr-cyc.yml
@@ -7,15 +7,15 @@ spec:
   replicas: 3
   selector:
     matchLabels:
-      name: kk6gpv-doggr-prodinj
+      name: kk6gpv-doggr-cyc
   template:
     metadata:
       labels:
-        name: kk6gpv-doggr-prodinj
+        name: kk6gpv-doggr-cyc
     spec:
       containers:
         - name: application
-          image: areed145/kk6gpv-doggr-prodinj:latest
+          image: areed145/kk6gpv-doggr-cyc:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 4000
