--- a/wunderground/Dockerfile
+++ b/wunderground/Dockerfile
@@ -12,8 +12,8 @@ RUN pip install --upgrade pip && \
 
 # EXPOSE 80
 
-#ENV MONGODB_CLIENT 'mongodb://kk6gpv:kk6gpv@mongo-mongodb-replicaset-0.mongo-mongodb-replicaset.default.svc.cluster.local,mongo-mongodb-replicaset-1.mongo-mongodb-replicaset.default.svc.cluster.local,mongo-mongodb-replicaset-2.mongo-mongodb-replicaset.default.svc.cluster.local/?replicaSet=db'
 ENV MONGODB_CLIENT 'mongodb+srv://kk6gpv:kk6gpv@cluster0-kglzh.azure.mongodb.net/test?retryWrites=true&w=majority'
-ENV SID 'KTXHOUST1941'
+ENV SID 'KTXHOUST2993'
+ENV API '945638f35a724a6b9638f35a727a6bd4'
 
 CMD ["python", "wunderground.py"]
