--- a/bus-wx/requirements.txt
+++ b/bus-wx/requirements.txt
@@ -1,4 +1,5 @@
 aprslib==0.6.46
+asyncio
 astroid==2.2.5
 certifi==2019.9.11
 chardet==3.0.4
@@ -24,4 +25,5 @@ six==1.12.0
 typed-ast==1.4.0
 tzlocal==2.0.0
 urllib3==1.25.3
+websockets
 wrapt==1.11.2
